tests/ui/borrowck/assign_while_borrow_aggregate.rx
//@ spec: RXS-0060
struct Wrap {
    r: &i32,
}

fn read(w: Wrap) -> i32 {
    *w.r
}

fn main() {
    let mut x = 1;
    let w = Wrap { r: &x };
    x = 5; //~ ERROR RX4005
    let _b = read(w);
}
